--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/store-devtools": "^10.1.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngx-device-detector": "^2.0.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
